--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="p5.min.js"></script>
-    <script src="clipping.js"></script>
+    <script src="test.js"></script>
   </head>
   <body>
     <main>
