--- a/assn8_textures_new/assn8-tex.html
+++ b/assn8_textures_new/assn8-tex.html
@@ -73,7 +73,7 @@
          uniform sampler2D grassTexture;
 
          // what texture ?
-         uniform float textureChoice;
+         uniform bool textureChoice;
 
          // Color that is the result of this shader
          out vec4 fragColor;
@@ -88,7 +88,7 @@
           }
 
          void main(void) {
-             fragColor = (textureChoice == 0.0) ? texture(theTexture, theUV) : customTexture(theUV);
+             fragColor = (textureChoice) ?  customTexture(theUV) : texture(theTexture, theUV);
          }
     </script>
 
