--- a/assn8_textures_new/assn8-tex.html
+++ b/assn8_textures_new/assn8-tex.html
@@ -70,26 +70,21 @@
 
          // the texture to use
          uniform sampler2D theTexture;
-         uniform sampler2D grassTexture;
-
-         // what texture ?
-         uniform bool textureChoice;
 
          // Color that is the result of this shader
          out vec4 fragColor;
 
-          vec4 customTexture(vec2 coord) {
-            float loc = floor(coord.x*10.0);
-            bool isEven = mod(loc, 2.0)==0.0;
-            vec4 yeah = vec4(coord.x, coord.y, 1.-coord.x, 1);
-            vec4 no = vec4(coord.x*2.0,coord.y*2.0,(1.0-coord.x)*2.0,1);
-            vec4 res = isEven ? yeah : no;
-            return res;
-          }
-
          void main(void) {
-             fragColor = (textureChoice) ?  customTexture(theUV) : texture(theTexture, theUV);
+             fragColor = gradientText(theUV);
          }
+
+         vec4 gradientText(vec2 tex_coords) {
+            vec3 red = vec3(1.0, 0.0, 0.0);
+            float percent;
+            percent = text_coords.y;
+            return vec4(red * percent, 1.0);
+        }
+
     </script>
 
      <!-- Matrix library and code for standard transformations -->
